[FE] remove "Add to cart" for meal plans.   set min height to 100% for preventing jump up

--- a/front-end/src/containers/Root/styles/styles.scss
+++ b/front-end/src/containers/Root/styles/styles.scss
@@ -14,9 +14,9 @@
     box-shadow: $shadow-primary;
   }
 
-  // .app-body {
-  //   min-height: 100vh;
-  // }
+  .app-body {
+    min-height: 100vh;
+  }
 
   .app-footer {
     height: $footer-height;
